--- a/jupyter notebooks/optimization2.ipynb
+++ b/jupyter notebooks/optimization2.ipynb
@@ -305,10 +305,10 @@
        "C3000     1918\n",
        "C2100     1883\n",
        "         ...  \n",
-       "C1580        1\n",
-       "C2190        1\n",
+       "C1245        1\n",
        "C6100        1\n",
        "C2561        1\n",
+       "C2500        1\n",
        "C5200        1\n",
        "Name: CLASSIFICATION, Length: 71, dtype: int64"
       ]
@@ -356,28 +356,28 @@
        "C8000       20\n",
        "C7120       18\n",
        "C1500       16\n",
-       "C1800       15\n",
        "C6000       15\n",
+       "C1800       15\n",
        "C1250       14\n",
        "C8200       11\n",
-       "C1278       10\n",
        "C1238       10\n",
+       "C1278       10\n",
        "C1235        9\n",
        "C1237        9\n",
        "C7210        7\n",
        "C4100        6\n",
        "C1720        6\n",
        "C2400        6\n",
-       "C1257        5\n",
        "C1600        5\n",
+       "C1257        5\n",
        "C0           3\n",
-       "C1260        3\n",
        "C2710        3\n",
+       "C1260        3\n",
        "C1267        2\n",
-       "C1246        2\n",
        "C3200        2\n",
        "C1234        2\n",
        "C1256        2\n",
+       "C1246        2\n",
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
@@ -908,9 +908,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-08-02 21:37:02.003221: I tensorflow/core/platform/cpu_feature_guard.cc:145] This TensorFlow binary is optimized with Intel(R) MKL-DNN to use the following CPU instructions in performance critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "To enable them in non-MKL-DNN operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-08-02 21:37:02.003613: I tensorflow/core/common_runtime/process_util.cc:115] Creating new thread pool with default inter op setting: 4. Tune using inter_op_parallelism_threads for best performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 25724 samples\n",
+      "Epoch 1/50\n",
+      "25724/25724 [==============================] - 9s 362us/sample - loss: 0.6325 - accuracy: 0.6725\n",
+      "Epoch 2/50\n",
+      "25724/25724 [==============================] - 9s 337us/sample - loss: 0.5764 - accuracy: 0.7295\n",
+      "Epoch 3/50\n",
+      "25724/25724 [==============================] - 9s 337us/sample - loss: 0.5708 - accuracy: 0.7296\n",
+      "Epoch 4/50\n",
+      "25724/25724 [==============================] - 9s 360us/sample - loss: 0.5671 - accuracy: 0.7309\n",
+      "Epoch 5/50\n",
+      "25724/25724 [==============================] - 7s 277us/sample - loss: 0.5637 - accuracy: 0.7314\n",
+      "Epoch 6/50\n",
+      "25724/25724 [==============================] - 6s 231us/sample - loss: 0.5603 - accuracy: 0.7317\n",
+      "Epoch 7/50\n",
+      "25724/25724 [==============================] - 8s 293us/sample - loss: 0.5575 - accuracy: 0.7319\n",
+      "Epoch 8/50\n",
+      "25724/25724 [==============================] - 6s 228us/sample - loss: 0.5557 - accuracy: 0.7322\n",
+      "Epoch 9/50\n",
+      "25724/25724 [==============================] - 6s 238us/sample - loss: 0.5548 - accuracy: 0.7318\n",
+      "Epoch 10/50\n",
+      "25724/25724 [==============================] - 6s 219us/sample - loss: 0.5541 - accuracy: 0.7321\n",
+      "Epoch 11/50\n",
+      "25724/25724 [==============================] - 6s 234us/sample - loss: 0.5536 - accuracy: 0.7317\n",
+      "Epoch 12/50\n",
+      "25724/25724 [==============================] - 6s 243us/sample - loss: 0.5529 - accuracy: 0.7315\n",
+      "Epoch 13/50\n",
+      "25724/25724 [==============================] - 6s 234us/sample - loss: 0.5526 - accuracy: 0.7315\n",
+      "Epoch 14/50\n",
+      "25724/25724 [==============================] - 6s 238us/sample - loss: 0.5521 - accuracy: 0.7321\n",
+      "Epoch 15/50\n",
+      "25724/25724 [==============================] - 6s 237us/sample - loss: 0.5518 - accuracy: 0.7326\n",
+      "Epoch 16/50\n",
+      "25724/25724 [==============================] - 6s 235us/sample - loss: 0.5513 - accuracy: 0.7315\n",
+      "Epoch 17/50\n",
+      "25724/25724 [==============================] - 6s 233us/sample - loss: 0.5510 - accuracy: 0.7331\n",
+      "Epoch 18/50\n",
+      "25724/25724 [==============================] - 6s 239us/sample - loss: 0.5506 - accuracy: 0.7330\n",
+      "Epoch 19/50\n",
+      "25724/25724 [==============================] - 6s 242us/sample - loss: 0.5502 - accuracy: 0.7331\n",
+      "Epoch 20/50\n",
+      "25724/25724 [==============================] - 6s 246us/sample - loss: 0.5501 - accuracy: 0.7322\n",
+      "Epoch 21/50\n",
+      "25724/25724 [==============================] - 6s 243us/sample - loss: 0.5499 - accuracy: 0.7331\n",
+      "Epoch 22/50\n",
+      "25724/25724 [==============================] - 6s 235us/sample - loss: 0.5496 - accuracy: 0.7328\n",
+      "Epoch 23/50\n",
+      "25724/25724 [==============================] - ETA: 0s - loss: 0.5494 - accuracy: 0.73 - 6s 240us/sample - loss: 0.5493 - accuracy: 0.7333\n",
+      "Epoch 24/50\n",
+      "25724/25724 [==============================] - 6s 250us/sample - loss: 0.5489 - accuracy: 0.7326\n",
+      "Epoch 25/50\n",
+      "25724/25724 [==============================] - 6s 234us/sample - loss: 0.5490 - accuracy: 0.7327\n",
+      "Epoch 26/50\n",
+      "25724/25724 [==============================] - 6s 247us/sample - loss: 0.5486 - accuracy: 0.7337\n",
+      "Epoch 27/50\n",
+      "25724/25724 [==============================] - 6s 249us/sample - loss: 0.5483 - accuracy: 0.7328\n",
+      "Epoch 28/50\n",
+      "25724/25724 [==============================] - 6s 241us/sample - loss: 0.5483 - accuracy: 0.7336\n",
+      "Epoch 29/50\n",
+      "25724/25724 [==============================] - 7s 254us/sample - loss: 0.5481 - accuracy: 0.7345\n",
+      "Epoch 30/50\n",
+      "25724/25724 [==============================] - 7s 258us/sample - loss: 0.5478 - accuracy: 0.7329\n",
+      "Epoch 31/50\n",
+      "25724/25724 [==============================] - 6s 252us/sample - loss: 0.5476 - accuracy: 0.7333\n",
+      "Epoch 32/50\n",
+      "25724/25724 [==============================] - 6s 251us/sample - loss: 0.5475 - accuracy: 0.7329\n",
+      "Epoch 33/50\n",
+      "25724/25724 [==============================] - 6s 242us/sample - loss: 0.5476 - accuracy: 0.7341\n",
+      "Epoch 34/50\n",
+      "25724/25724 [==============================] - 7s 256us/sample - loss: 0.5472 - accuracy: 0.7343\n",
+      "Epoch 35/50\n",
+      "25724/25724 [==============================] - 6s 240us/sample - loss: 0.5475 - accuracy: 0.7338\n",
+      "Epoch 36/50\n",
+      "25724/25724 [==============================] - 6s 242us/sample - loss: 0.5470 - accuracy: 0.7330\n",
+      "Epoch 37/50\n",
+      "25724/25724 [==============================] - 6s 253us/sample - loss: 0.5469 - accuracy: 0.7341\n",
+      "Epoch 38/50\n",
+      "25724/25724 [==============================] - 6s 239us/sample - loss: 0.5468 - accuracy: 0.7331\n",
+      "Epoch 39/50\n",
+      "25724/25724 [==============================] - 7s 257us/sample - loss: 0.5466 - accuracy: 0.7332\n",
+      "Epoch 40/50\n",
+      "25724/25724 [==============================] - 6s 248us/sample - loss: 0.5465 - accuracy: 0.7342\n",
+      "Epoch 41/50\n",
+      "25724/25724 [==============================] - 6s 248us/sample - loss: 0.5465 - accuracy: 0.7334\n",
+      "Epoch 42/50\n",
+      "25724/25724 [==============================] - 6s 251us/sample - loss: 0.5464 - accuracy: 0.7337\n",
+      "Epoch 43/50\n",
+      "25724/25724 [==============================] - 6s 249us/sample - loss: 0.5461 - accuracy: 0.7340\n",
+      "Epoch 44/50\n",
+      "25724/25724 [==============================] - 7s 268us/sample - loss: 0.5461 - accuracy: 0.7335\n",
+      "Epoch 45/50\n",
+      "25724/25724 [==============================] - 6s 251us/sample - loss: 0.5462 - accuracy: 0.7337\n",
+      "Epoch 46/50\n",
+      "25724/25724 [==============================] - 7s 276us/sample - loss: 0.5459 - accuracy: 0.7331\n",
+      "Epoch 47/50\n",
+      "25724/25724 [==============================] - 7s 264us/sample - loss: 0.5458 - accuracy: 0.7338\n",
+      "Epoch 48/50\n",
+      "25724/25724 [==============================] - 7s 257us/sample - loss: 0.5458 - accuracy: 0.7345\n",
+      "Epoch 49/50\n",
+      "25724/25724 [==============================] - 6s 232us/sample - loss: 0.5458 - accuracy: 0.7346\n",
+      "Epoch 50/50\n",
+      "25724/25724 [==============================] - 6s 233us/sample - loss: 0.5455 - accuracy: 0.7342\n",
+      "8575/1 - 2s - loss: 0.5586 - accuracy: 0.7270\n",
+      "Loss: 0.5521184016455715, Accuracy: 0.7269970774650574\n"
+     ]
+    }
+   ],
    "source": [
     "# Model #3\n",
     "# In this model, I tried to change the activation types to see if this would produce a higher accuracy\n",
@@ -934,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
