--- a/jupyter notebooks/optimization3.ipynb
+++ b/jupyter notebooks/optimization3.ipynb
@@ -234,8 +234,8 @@
        "T2        16\n",
        "T14        3\n",
        "T25        3\n",
-       "T15        2\n",
        "T29        2\n",
+       "T15        2\n",
        "T17        1\n",
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
@@ -305,11 +305,11 @@
        "C3000     1918\n",
        "C2100     1883\n",
        "         ...  \n",
-       "C1580        1\n",
-       "C2190        1\n",
-       "C6100        1\n",
+       "C1900        1\n",
+       "C1820        1\n",
+       "C1728        1\n",
        "C2561        1\n",
-       "C5200        1\n",
+       "C3700        1\n",
        "Name: CLASSIFICATION, Length: 71, dtype: int64"
       ]
      },
@@ -362,22 +362,22 @@
        "C8200       11\n",
        "C1278       10\n",
        "C1238       10\n",
-       "C1235        9\n",
        "C1237        9\n",
+       "C1235        9\n",
        "C7210        7\n",
-       "C4100        6\n",
        "C1720        6\n",
        "C2400        6\n",
+       "C4100        6\n",
        "C1257        5\n",
        "C1600        5\n",
-       "C0           3\n",
        "C1260        3\n",
+       "C0           3\n",
        "C2710        3\n",
-       "C1267        2\n",
-       "C1246        2\n",
-       "C3200        2\n",
        "C1234        2\n",
+       "C1246        2\n",
        "C1256        2\n",
+       "C1267        2\n",
+       "C3200        2\n",
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
@@ -908,16 +908,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-02 19:26:53.322117: I tensorflow/core/platform/cpu_feature_guard.cc:145] This TensorFlow binary is optimized with Intel(R) MKL-DNN to use the following CPU instructions in performance critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "2023-08-02 21:37:01.977275: I tensorflow/core/platform/cpu_feature_guard.cc:145] This TensorFlow binary is optimized with Intel(R) MKL-DNN to use the following CPU instructions in performance critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
       "To enable them in non-MKL-DNN operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-08-02 19:26:53.343250: I tensorflow/core/common_runtime/process_util.cc:115] Creating new thread pool with default inter op setting: 4. Tune using inter_op_parallelism_threads for best performance.\n"
+      "2023-08-02 21:37:01.978069: I tensorflow/core/common_runtime/process_util.cc:115] Creating new thread pool with default inter op setting: 4. Tune using inter_op_parallelism_threads for best performance.\n"
      ]
     },
     {
@@ -925,82 +925,128 @@
      "output_type": "stream",
      "text": [
       "Train on 25724 samples\n",
-      "Epoch 1/80\n",
-      "25724/25724 [==============================] - 16s 622us/sample - loss: 0.6322 - accuracy: 0.6759- loss: 0.6336 - ac\n",
-      "Epoch 2/80\n",
-      "25724/25724 [==============================] - 12s 451us/sample - loss: 0.5747 - accuracy: 0.7301\n",
-      "Epoch 3/80\n",
-      "25724/25724 [==============================] - 20s 785us/sample - loss: 0.5696 - accuracy: 0.7307\n",
-      "Epoch 4/80\n",
-      "25724/25724 [==============================] - 22s 858us/sample - loss: 0.5669 - accuracy: 0.7311\n",
-      "Epoch 5/80\n",
-      "25724/25724 [==============================] - 21s 807us/sample - loss: 0.5642 - accuracy: 0.7308- loss: 0.5640 - accuracy: 0.\n",
-      "Epoch 6/80\n",
-      "25724/25724 [==============================] - 18s 717us/sample - loss: 0.5607 - accuracy: 0.7309\n",
-      "Epoch 7/80\n",
-      "25724/25724 [==============================] - 16s 616us/sample - loss: 0.5587 - accuracy: 0.7308\n",
-      "Epoch 8/80\n",
-      "25724/25724 [==============================] - 17s 652us/sample - loss: 0.5578 - accuracy: 0.7305- loss: 0.5585 - accuracy - ETA\n",
-      "Epoch 9/80\n",
-      "25724/25724 [==============================] - 17s 662us/sample - loss: 0.5568 - accuracy: 0.7318\n",
-      "Epoch 10/80\n",
-      "25724/25724 [==============================] - 14s 525us/sample - loss: 0.5564 - accuracy: 0.7312\n",
-      "Epoch 11/80\n",
-      "25724/25724 [==============================] - 15s 596us/sample - loss: 0.5553 - accuracy: 0.7314\n",
-      "Epoch 12/80\n",
-      "25724/25724 [==============================] - 13s 522us/sample - loss: 0.5545 - accuracy: 0.7326\n",
-      "Epoch 13/80\n",
-      "25724/25724 [==============================] - 13s 490us/sample - loss: 0.5541 - accuracy: 0.7322\n",
-      "Epoch 14/80\n",
-      "25724/25724 [==============================] - 15s 572us/sample - loss: 0.5538 - accuracy: 0.7321\n",
-      "Epoch 15/80\n",
-      "25724/25724 [==============================] - 15s 584us/sample - loss: 0.5529 - accuracy: 0.7320\n",
-      "Epoch 16/80\n",
-      "25724/25724 [==============================] - 14s 556us/sample - loss: 0.5531 - accuracy: 0.7319\n",
-      "Epoch 17/80\n",
-      "25724/25724 [==============================] - 14s 561us/sample - loss: 0.5524 - accuracy: 0.7314\n",
-      "Epoch 18/80\n",
-      "25724/25724 [==============================] - 16s 603us/sample - loss: 0.5524 - accuracy: 0.7316\n",
-      "Epoch 19/80\n",
-      "25724/25724 [==============================] - 14s 555us/sample - loss: 0.5516 - accuracy: 0.7325\n",
-      "Epoch 20/80\n",
-      "25724/25724 [==============================] - 14s 557us/sample - loss: 0.5513 - accuracy: 0.7328\n",
-      "Epoch 21/80\n",
-      "25724/25724 [==============================] - 13s 518us/sample - loss: 0.5510 - accuracy: 0.7327\n",
-      "Epoch 22/80\n",
-      "25724/25724 [==============================] - 13s 490us/sample - loss: 0.5507 - accuracy: 0.7335\n",
-      "Epoch 23/80\n",
-      "25724/25724 [==============================] - 13s 503us/sample - loss: 0.5503 - accuracy: 0.7339\n",
-      "Epoch 24/80\n",
-      "25724/25724 [==============================] - 13s 491us/sample - loss: 0.5501 - accuracy: 0.7327\n",
-      "Epoch 25/80\n",
-      "25724/25724 [==============================] - 13s 524us/sample - loss: 0.5498 - accuracy: 0.7326\n",
-      "Epoch 26/80\n",
-      "25724/25724 [==============================] - 13s 489us/sample - loss: 0.5498 - accuracy: 0.7329\n",
-      "Epoch 27/80\n",
-      "25724/25724 [==============================] - 13s 496us/sample - loss: 0.5494 - accuracy: 0.7343\n",
-      "Epoch 28/80\n",
-      "25724/25724 [==============================] - 14s 562us/sample - loss: 0.5494 - accuracy: 0.7343\n",
-      "Epoch 29/80\n",
-      "25724/25724 [==============================] - 15s 599us/sample - loss: 0.5487 - accuracy: 0.7333\n",
-      "Epoch 30/80\n",
-      "25724/25724 [==============================] - 15s 576us/sample - loss: 0.5488 - accuracy: 0.7332\n",
-      "Epoch 31/80\n",
-      "25724/25724 [==============================] - 15s 571us/sample - loss: 0.5489 - accuracy: 0.7336\n",
-      "Epoch 32/80\n",
-      "25724/25724 [==============================] - 15s 571us/sample - loss: 0.5487 - accuracy: 0.7330\n",
-      "Epoch 33/80\n",
-      "25724/25724 [==============================] - 14s 548us/sample - loss: 0.5485 - accuracy: 0.7334\n",
-      "Epoch 34/80\n",
-      "25724/25724 [==============================] - 13s 496us/sample - loss: 0.5482 - accuracy: 0.7342\n",
-      "Epoch 35/80\n",
-      "25724/25724 [==============================] - 16s 626us/sample - loss: 0.5486 - accuracy: 0.7332\n",
-      "Epoch 36/80\n",
-      "25724/25724 [==============================] - 16s 607us/sample - loss: 0.5479 - accuracy: 0.7338\n",
-      "Epoch 37/80\n",
-      "25724/25724 [==============================] - 16s 607us/sample - loss: 0.5481 - accuracy: 0.7341\n",
-      "Epoch 38/80\n",
-      "16384/25724 [==================>...........] - ETA: 5s - loss: 0.5478 - accuracy: 0.7346"
+      "Epoch 1/60\n",
+      "25724/25724 [==============================] - 9s 368us/sample - loss: 0.6330 - accuracy: 0.6648\n",
+      "Epoch 2/60\n",
+      "25724/25724 [==============================] - 9s 333us/sample - loss: 0.5751 - accuracy: 0.7274\n",
+      "Epoch 3/60\n",
+      "25724/25724 [==============================] - 9s 339us/sample - loss: 0.5688 - accuracy: 0.7303\n",
+      "Epoch 4/60\n",
+      "25724/25724 [==============================] - 9s 362us/sample - loss: 0.5633 - accuracy: 0.7308\n",
+      "Epoch 5/60\n",
+      "25724/25724 [==============================] - 7s 272us/sample - loss: 0.5595 - accuracy: 0.7305\n",
+      "Epoch 6/60\n",
+      "25724/25724 [==============================] - 6s 225us/sample - loss: 0.5573 - accuracy: 0.7309\n",
+      "Epoch 7/60\n",
+      "25724/25724 [==============================] - 8s 293us/sample - loss: 0.5559 - accuracy: 0.7323\n",
+      "Epoch 8/60\n",
+      "25724/25724 [==============================] - 6s 228us/sample - loss: 0.5548 - accuracy: 0.7320\n",
+      "Epoch 9/60\n",
+      "25724/25724 [==============================] - 6s 238us/sample - loss: 0.5539 - accuracy: 0.7315\n",
+      "Epoch 10/60\n",
+      "25724/25724 [==============================] - 6s 225us/sample - loss: 0.5533 - accuracy: 0.7317\n",
+      "Epoch 11/60\n",
+      "25724/25724 [==============================] - 6s 235us/sample - loss: 0.5527 - accuracy: 0.7330\n",
+      "Epoch 12/60\n",
+      "25724/25724 [==============================] - 6s 241us/sample - loss: 0.5523 - accuracy: 0.7306\n",
+      "Epoch 13/60\n",
+      "25724/25724 [==============================] - 6s 236us/sample - loss: 0.5517 - accuracy: 0.7317\n",
+      "Epoch 14/60\n",
+      "25724/25724 [==============================] - 6s 235us/sample - loss: 0.5513 - accuracy: 0.7311\n",
+      "Epoch 15/60\n",
+      "25724/25724 [==============================] - 6s 236us/sample - loss: 0.5509 - accuracy: 0.7325\n",
+      "Epoch 16/60\n",
+      "25724/25724 [==============================] - 6s 236us/sample - loss: 0.5505 - accuracy: 0.7322\n",
+      "Epoch 17/60\n",
+      "25724/25724 [==============================] - 6s 234us/sample - loss: 0.5501 - accuracy: 0.7320\n",
+      "Epoch 18/60\n",
+      "25724/25724 [==============================] - 6s 237us/sample - loss: 0.5501 - accuracy: 0.7330\n",
+      "Epoch 19/60\n",
+      "25724/25724 [==============================] - 6s 243us/sample - loss: 0.5497 - accuracy: 0.7320\n",
+      "Epoch 20/60\n",
+      "25724/25724 [==============================] - 6s 248us/sample - loss: 0.5495 - accuracy: 0.7326\n",
+      "Epoch 21/60\n",
+      "25724/25724 [==============================] - 6s 245us/sample - loss: 0.5493 - accuracy: 0.7324\n",
+      "Epoch 22/60\n",
+      "25724/25724 [==============================] - 6s 237us/sample - loss: 0.5492 - accuracy: 0.7331\n",
+      "Epoch 23/60\n",
+      "25724/25724 [==============================] - 6s 242us/sample - loss: 0.5487 - accuracy: 0.7325\n",
+      "Epoch 24/60\n",
+      "25724/25724 [==============================] - 6s 240us/sample - loss: 0.5487 - accuracy: 0.7332\n",
+      "Epoch 25/60\n",
+      "25724/25724 [==============================] - 6s 240us/sample - loss: 0.5487 - accuracy: 0.7338\n",
+      "Epoch 26/60\n",
+      "25724/25724 [==============================] - 6s 242us/sample - loss: 0.5483 - accuracy: 0.7332\n",
+      "Epoch 27/60\n",
+      "25724/25724 [==============================] - 7s 253us/sample - loss: 0.5483 - accuracy: 0.7327\n",
+      "Epoch 28/60\n",
+      "25724/25724 [==============================] - 6s 239us/sample - loss: 0.5481 - accuracy: 0.7329\n",
+      "Epoch 29/60\n",
+      "25724/25724 [==============================] - 7s 258us/sample - loss: 0.5481 - accuracy: 0.7324\n",
+      "Epoch 30/60\n",
+      "25724/25724 [==============================] - 6s 244us/sample - loss: 0.5479 - accuracy: 0.7336\n",
+      "Epoch 31/60\n",
+      "25724/25724 [==============================] - 6s 250us/sample - loss: 0.5477 - accuracy: 0.7331\n",
+      "Epoch 32/60\n",
+      "25724/25724 [==============================] - 6s 253us/sample - loss: 0.5476 - accuracy: 0.7329\n",
+      "Epoch 33/60\n",
+      "25724/25724 [==============================] - 6s 240us/sample - loss: 0.5477 - accuracy: 0.7331\n",
+      "Epoch 34/60\n",
+      "25724/25724 [==============================] - 7s 253us/sample - loss: 0.5474 - accuracy: 0.7330\n",
+      "Epoch 35/60\n",
+      "25724/25724 [==============================] - 7s 256us/sample - loss: 0.5473 - accuracy: 0.7330\n",
+      "Epoch 36/60\n",
+      "25724/25724 [==============================] - 7s 274us/sample - loss: 0.5474 - accuracy: 0.7331\n",
+      "Epoch 37/60\n",
+      "25724/25724 [==============================] - 6s 250us/sample - loss: 0.5471 - accuracy: 0.7325\n",
+      "Epoch 38/60\n",
+      "25724/25724 [==============================] - 6s 241us/sample - loss: 0.5469 - accuracy: 0.7332\n",
+      "Epoch 39/60\n",
+      "25724/25724 [==============================] - 6s 252us/sample - loss: 0.5473 - accuracy: 0.7318\n",
+      "Epoch 40/60\n",
+      "25724/25724 [==============================] - 6s 250us/sample - loss: 0.5469 - accuracy: 0.7335\n",
+      "Epoch 41/60\n",
+      "25724/25724 [==============================] - 6s 250us/sample - loss: 0.5470 - accuracy: 0.7341\n",
+      "Epoch 42/60\n",
+      "25724/25724 [==============================] - 6s 248us/sample - loss: 0.5467 - accuracy: 0.7331\n",
+      "Epoch 43/60\n",
+      "25724/25724 [==============================] - 6s 248us/sample - loss: 0.5468 - accuracy: 0.7329\n",
+      "Epoch 44/60\n",
+      "25724/25724 [==============================] - 7s 274us/sample - loss: 0.5465 - accuracy: 0.7327\n",
+      "Epoch 45/60\n",
+      "25724/25724 [==============================] - 6s 246us/sample - loss: 0.5464 - accuracy: 0.7334\n",
+      "Epoch 46/60\n",
+      "25724/25724 [==============================] - 7s 274us/sample - loss: 0.5464 - accuracy: 0.7325\n",
+      "Epoch 47/60\n",
+      "25724/25724 [==============================] - 7s 260us/sample - loss: 0.5464 - accuracy: 0.7336\n",
+      "Epoch 48/60\n",
+      "25724/25724 [==============================] - 7s 255us/sample - loss: 0.5465 - accuracy: 0.7336\n",
+      "Epoch 49/60\n",
+      "25724/25724 [==============================] - 6s 227us/sample - loss: 0.5463 - accuracy: 0.7337\n",
+      "Epoch 50/60\n",
+      "25724/25724 [==============================] - 6s 229us/sample - loss: 0.5464 - accuracy: 0.7337\n",
+      "Epoch 51/60\n",
+      "25724/25724 [==============================] - 4s 164us/sample - loss: 0.5461 - accuracy: 0.7326\n",
+      "Epoch 52/60\n",
+      "25724/25724 [==============================] - 3s 127us/sample - loss: 0.5461 - accuracy: 0.7337\n",
+      "Epoch 53/60\n",
+      "25724/25724 [==============================] - 4s 137us/sample - loss: 0.5460 - accuracy: 0.7334\n",
+      "Epoch 54/60\n",
+      "25724/25724 [==============================] - 4s 164us/sample - loss: 0.5458 - accuracy: 0.7330\n",
+      "Epoch 55/60\n",
+      "25724/25724 [==============================] - 3s 133us/sample - loss: 0.5458 - accuracy: 0.7338\n",
+      "Epoch 56/60\n",
+      "25724/25724 [==============================] - 3s 120us/sample - loss: 0.5458 - accuracy: 0.7328\n",
+      "Epoch 57/60\n",
+      "25724/25724 [==============================] - 3s 119us/sample - loss: 0.5458 - accuracy: 0.7341\n",
+      "Epoch 58/60\n",
+      "25724/25724 [==============================] - 3s 125us/sample - loss: 0.5457 - accuracy: 0.7333\n",
+      "Epoch 59/60\n",
+      "25724/25724 [==============================] - 4s 144us/sample - loss: 0.5458 - accuracy: 0.7326\n",
+      "Epoch 60/60\n",
+      "25724/25724 [==============================] - 4s 160us/sample - loss: 0.5458 - accuracy: 0.7331\n",
+      "8575/1 - 1s - loss: 0.5620 - accuracy: 0.7268\n",
+      "Loss: 0.551094726299753, Accuracy: 0.7267638444900513\n"
      ]
     }
    ],
@@ -1027,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
